Test/dafny0/ParseErrors.dfy.expect
ParseErrors.dfy(7,18): Error: a chain cannot have more than one != operator
ParseErrors.dfy(9,36): Error: this operator chain cannot continue with a descending operator
ParseErrors.dfy(10,37): Error: this operator chain cannot continue with an ascending operator
ParseErrors.dfy(15,23): Error: this operator chain cannot continue with a descending operator
ParseErrors.dfy(18,17): Error: this operator cannot be part of a chain
ParseErrors.dfy(19,18): Error: this operator cannot be part of a chain
ParseErrors.dfy(20,17): Error: this operator cannot be part of a chain
ParseErrors.dfy(21,17): Error: chaining not allowed from the previous operator
ParseErrors.dfy(28,18): Error: chaining not allowed from the previous operator
ParseErrors.dfy(31,19): Error: can only chain disjoint (!!) with itself.
ParseErrors.dfy(58,7): Error: the main operator of a calculation must be transitive
ParseErrors.dfy(74,1): Error: this operator cannot continue this calculation
ParseErrors.dfy(75,1): Error: this operator cannot continue this calculation
ParseErrors.dfy(80,1): Error: this operator cannot continue this calculation
ParseErrors.dfy(81,1): Error: this operator cannot continue this calculation
ParseErrors.dfy(87,1): Error: this operator cannot continue this calculation
ParseErrors.dfy(96,0): Error: Lemmas cannot be declared ghost (they are 'ghost' by default).
ParseErrors.dfy(98,0): Error: Inductive lemmas cannot be declared ghost (they are 'ghost' by default).
ParseErrors.dfy(100,0): Error: Colemmas cannot be declared ghost (they are 'ghost' by default).
ParseErrors.dfy(102,0): Error: Two-state lemmas cannot be declared ghost (they are 'ghost' by default).
ParseErrors.dfy(105,2): Error: Constructors cannot be declared 'ghost'.
ParseErrors.dfy(113,16): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(114,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(116,8): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(117,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(119,19): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(120,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(122,12): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(123,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(125,18): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(126,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(133,11): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(135,12): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(137,23): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(139,16): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(142,21): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(143,22): Error: formal cannot be declared 'ghost' in this context
ParseErrors.dfy(155,19): Error: verticalbar expected
ParseErrors.dfy(155,18): Error: a set comprehension with more than one bound variable must have a term expression
ParseErrors.dfy(156,22): Error: a set comprehension with more than one bound variable must have a term expression
ParseErrors.dfy(163,2): Error: mutable fields are now allowed in value types
ParseErrors.dfy(167,2): Error: mutable fields are now allowed in value types
42 parse errors detected in ParseErrors.dfy
